Add support of keyboard output

--- a/examples/test/gui.html
+++ b/examples/test/gui.html
@@ -20,8 +20,9 @@
 				<div class="row">
 					<button type="button" class="btn btn-outline-primary" data-type="button" data-vjoy="1" data-number="1">1</button>
 					<button type="button" class="btn btn-outline-primary" data-type="button" data-vjoy="1" data-number="2">2</button>
-					<button type="button" class="btn btn-outline-primary" data-type="button" data-vjoy="1" data-number="3">3</button>
-					<button type="button" class="btn btn-outline-primary" onclick="requestFullScreen();">F</button>
+					<button type="button" class="btn btn-outline-primary" data-type="key"    data-key="A">A</button>
+					<button type="button" class="btn btn-outline-primary" data-type="key"    data-key="Return">Return</button>
+					<button type="button" class="btn btn-outline-primary" onclick="requestFullScreen();">FS</button>
 				</div>
 				<div class="row">
 					<input class="slider" id="slider1" type="range" data-type="axis" data-vjoy="1" data-number="1"/>
