Support of key modifiers

--- a/examples/test/gui.html
+++ b/examples/test/gui.html
@@ -20,8 +20,8 @@
 				<div class="row">
 					<button type="button" class="btn btn-outline-primary" data-type="button" data-vjoy="1" data-number="1">1</button>
 					<button type="button" class="btn btn-outline-primary" data-type="button" data-vjoy="1" data-number="2">2</button>
-					<button type="button" class="btn btn-outline-primary" data-type="key"    data-key="A">A</button>
-					<button type="button" class="btn btn-outline-primary" data-type="key"    data-key="Return">Return</button>
+					<button type="button" class="btn btn-outline-primary" data-type="key"    data-key="A">a</button>
+					<button type="button" class="btn btn-outline-primary" data-type="key"    data-key="LShift+B">B</button>
 					<button type="button" class="btn btn-outline-primary" onclick="requestFullScreen();">FS</button>
 				</div>
 				<div class="row">
